--- a/docker/deploy/docker-compose.yml
+++ b/docker/deploy/docker-compose.yml
@@ -4,12 +4,12 @@ services:
   cache:
     image : redis
     ports:
-      - "127.0.0.1:6379:6379"
+      - "6379:6379"
 
   db:
     image: mongo
     ports:
-      - "127.0.0.1:27017:27017"
+      - "27017"
 
   backend:
     build:
@@ -18,5 +18,5 @@ services:
     ports:
       - "127.0.0.1:7000:8080"
     depends_on:
-      - mongo
-      - redis
+      - db
+      - cache
