chore: from docker-compose standolone to plugin

--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -13,7 +13,7 @@ services:
 
   backend:
     build:
-      dockerfile: ./docker/deploy/Dockerfile
+      dockerfile: ./docker/dev/Dockerfile
       context: ../../
     ports:
       - "127.0.0.1:7000:8080"
