Good Luck - Deploy

--- a/docker/deploy/docker-compose.yml
+++ b/docker/deploy/docker-compose.yml
@@ -20,3 +20,12 @@ services:
     depends_on:
       - db
       - cache
+
+  frontend:
+    build:
+      dockerfile: ./docker/deploy/Dockerfile-nginx
+      context: ../../
+    ports:
+      - "80:3000"
+    depends_on:
+      - backend
