fix: dockerfiles now work

--- a/docker/deploy/be/Dockerfile
+++ b/docker/deploy/be/Dockerfile
@@ -24,4 +24,6 @@ RUN apt update && \
 COPY --from=builder /app/build/cmd .
 COPY --from=builder /app/docker/deploy/entrypoint.sh .
 
+ENV GIN_MODE=release
+
 CMD ["./entrypoint.sh"]
