--- a/docker/deploy/proxy/Dockerfile
+++ b/docker/deploy/proxy/Dockerfile
@@ -28,4 +28,4 @@ COPY --from=frontend_builder /nextjs-ui/out /usr/share/nginx/html
 
 EXPOSE 3000 80
 
-ENTRYPOINT ["nginx"]
+ENTRYPOINT ["nginx", "-d"]
