--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -1,16 +1,15 @@
-server {
-    listen 80;
+worker_processes 4;
 
-    location / {
+events { worker_connections 1024; }
+
+http {
+    server {
+        listen 80;
         root  /usr/share/nginx/html;
         include /etc/nginx/mime.types;
-        try_files $uri /index.html;
-    }
 
-    location /api/ {
-        proxy_pass http://127.0.0.1:7000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        location /appui {
+            try_files $uri /index.html;
+        }
     }
 }
