add: /api, deploy, test for barbers

--- a/docker/deploy/be/Dockerfile
+++ b/docker/deploy/be/Dockerfile
@@ -26,4 +26,4 @@ COPY --from=builder /app/docker/deploy/be/entrypoint.sh .
 
 ENV GIN_MODE=release
 
-CMD ["./entrypoint.sh"]
+CMD ["sh", "./entrypoint.sh"]
