--- a/docker/test/Dockerfile
+++ b/docker/test/Dockerfile
@@ -14,4 +14,4 @@ COPY . .
 RUN mkdir -p build && \
 	go build -o build ./... 
 
-CMD ["./docker/test/entrypoint.sh"]
+CMD ["sh", "./docker/test/entrypoint.sh"]
