--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -1,15 +1,16 @@
-worker_processes 4;
+server {
+    listen                  80 default_server;
+    server_name             _;
 
-events { worker_connections 1024; }
+    location /api {
+        proxy_pass http://backend:8080;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    }
 
-http {
-    server {
-        listen 80;
-        root  /usr/share/nginx/html;
-        include /etc/nginx/mime.types;
-
-        location /appui {
-            try_files $uri /index.html;
-        }
+    location / {
+        root /usr/share/nginx/html;
+        try_files /$uri /index.html;
     }
 }
