--- a/fe/package.json
+++ b/fe/package.json
@@ -26,6 +26,7 @@
     "flowbite": "^1.6.2",
     "flowbite-react": "^0.3.7",
     "formik": "^2.2.9",
+    "iron-session": "^6.3.1",
     "next": "13.1.1",
     "next-session": "^4.0.5",
     "react": "18.2.0",
