--- a/fe/tsconfig.json
+++ b/fe/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/home.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/home.js", "lib/localStorage.tsx"],
   "exclude": ["node_modules"]
 }
