fix: .env nightmares

--- a/.env
+++ b/.env
@@ -1,11 +1,7 @@
+# backend
+
 TOKEN_HOUR_LIFE_SPAN="24"
 API_SECRET="super_secret"
+MONGO_PORT="27017"
+REDIS_PORT="6379"
 
-
-# remove the comment to test on docker
-MONGO_URI="mongodb://db:27017"
-REDIS_ADDRESS="cache:6379"
-
-# remove the comment to test locally
-# MONGO_URI="mongodb://localhost:27017"
-# REDIS_ADDRESS="localhost:6379"
