fix: github actions secret

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,15 +21,10 @@ jobs:
             go.sum
       
       - name: Add envs
-        run: mv .env.template .env
+        run: |
+          mv .env.template .env
+          echo GEOCODE_API_SECRET=${{ secrets.GEOCODE_API_SECRET }} >> .env
       
-      - name: Check env
-        run: echo $GEOCODE_API_SECRET
-        env:
-          GEOCODE_API_SECRET: ${{ secrets.GEOCODE_API_SECRET }}
-
       - name: Run test
         run: make github
-        env:
-          GEOCODE_API_SECRET: ${{ secrets.GEOCODE_API_SECRET }}
         if: env.GIT_DIFF
