--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,9 @@
 # backend
 
-TOKEN_HOUR_LIFE_SPAN="24"
+# valid data format are "ns", "us" (or "µs"), "ms", "s", "m", "h"
+TOKEN_LIFE_SPAN="24h"
 TOKEN_API_SECRET="super_secret"
+
 MONGO_PORT="27017"
 REDIS_PORT="6379"
 
