calendar done, to be tested in edge cases

--- a/fe/package.json
+++ b/fe/package.json
@@ -31,8 +31,10 @@
     "flowbite": "^1.6.2",
     "flowbite-react": "^0.3.7",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "next": "13.1.1",
     "react": "18.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "18.2.0",
     "react-stars": "^2.2.5",
     "tw-elements": "^1.0.0-alpha13",
