--- a/fe/package.json
+++ b/fe/package.json
@@ -32,6 +32,7 @@
     "flowbite-react": "^0.3.7",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-confirm-alert": "^3.0.6",
