--- a/fe/package.json
+++ b/fe/package.json
@@ -25,6 +25,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "chart.js": "^4.3.0",
     "clsx": "^1.2.1",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
@@ -35,6 +36,7 @@
     "moment-timezone": "^0.5.43",
     "next": "13.1.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "18.2.0",
     "react-stars": "^2.2.5",
@@ -42,6 +44,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "@types/react-stars": "^2.2.1",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
