--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     image: mongo
     expose:
       - 27017
+    ports:
+      - 127.0.0.1:27017:27017 
     networks:
       - dbClusterDeploy
     restart: always
@@ -30,6 +32,8 @@ services:
     image: mongo
     expose:
       - 27017
+    ports:
+      - 127.0.0.1:27018:27017 
     networks:
       - dbClusterDeploy
     restart: always
@@ -46,6 +50,8 @@ services:
     image: mongo
     expose:
       - 27017
+    ports:
+      - 127.0.0.1:27019:27017 
     networks:
       - dbClusterDeploy
     restart: always
