--- a/fe/package.json
+++ b/fe/package.json
@@ -10,30 +10,41 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fullcalendar/core": "^6.1.7",
+    "@fullcalendar/daygrid": "^6.1.7",
+    "@fullcalendar/react": "^6.1.7",
+    "@fullcalendar/timegrid": "^6.1.7",
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
     "@next/font": "13.1.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "chart.js": "^4.3.0",
     "clsx": "^1.2.1",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "flowbite": "^1.6.2",
     "flowbite-react": "^0.3.7",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "next": "13.1.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "18.2.0",
     "react-stars": "^2.2.5",
     "tw-elements": "^1.0.0-alpha13",
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "@types/react-stars": "^2.2.1",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
