Setup docker backend files

--- a/docker/deploy/be/Dockerfile
+++ b/docker/deploy/be/Dockerfile
@@ -1,28 +1,19 @@
-FROM golang:1.20.2 as builder
-WORKDIR /app
-
-RUN apt update && \
-	apt upgrade -y
-
-COPY go.mod go.sum ./
-RUN go mod download && \
-	go mod verify && \
-	go mod tidy
-
-COPY . .	
-RUN mkdir -p build && \
-	go build -o build ./...
-
-FROM ubuntu:22.04
+FROM golang:1.20.2 as build
 WORKDIR /app
 
 RUN apt update && \
 	apt upgrade -y && \
 	apt-get install -y netcat
 
-COPY --from=builder /app/build/cmd .
-COPY --from=builder /app/docker/deploy/be/entrypoint.sh .
+COPY go.mod go.sum ./
+RUN go mod download && \
+	go mod verify && \
+	go mod tidy
+
+COPY . .
+RUN mkdir -p build && \
+	go build -o build ./...
 
 ENV GIN_MODE=release
 
-CMD ["sh", "./entrypoint.sh"]
+CMD ["sh", "./docker/deploy/be/entrypoint.sh"]
