--- a/fe/package.json
+++ b/fe/package.json
@@ -15,9 +15,10 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@fullcalendar/core": "^6.1.7",
-    "@fullcalendar/daygrid": "^6.1.7",
-    "@fullcalendar/react": "^6.1.7",
+    "@fullcalendar/core": "^6.1.8",
+    "@fullcalendar/daygrid": "^6.1.8",
+    "@fullcalendar/interaction": "^6.1.8",
+    "@fullcalendar/react": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.7",
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
@@ -32,6 +33,7 @@
     "flowbite": "^1.6.2",
     "flowbite-react": "^0.3.7",
     "formik": "^2.2.9",
+    "fullcalendar": "^6.1.8",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "next": "13.1.1",
