Fix nginx config

--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -11,6 +11,6 @@ server {
 
     location / {
         root /usr/share/nginx/html;
-        try_files /$uri /index.html;
+        try_files $uri $uri.html $uri/ =404;
     }
 }
