--- a/fe/package.json
+++ b/fe/package.json
@@ -41,6 +41,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-stars": "^2.2.5",
     "tw-elements": "^1.0.0-alpha13",
     "typescript": "4.9.4"
